--- a/src/app/components/employee-master-search/employee-master-search.component.html
+++ b/src/app/components/employee-master-search/employee-master-search.component.html
@@ -12,9 +12,9 @@
 
 </div>
 
-<ngx-side-modal [(show)]="showModal">
+<ngx-side-modal [(show)]="showModal" >
     <div modal-header>{{selectionHeader}}</div>
-    <div modal-body style="background: #fff;">
+    <div modal-body >
         <nb-card style="border: none;padding: 0px;margin: 0px;">
             <nb-card-body style="padding: 0px;margin: 0px;">
                 <div>
