--- a/src/app/modules/employeemodule/existrequest/existrequest.component.html
+++ b/src/app/modules/employeemodule/existrequest/existrequest.component.html
@@ -47,7 +47,7 @@
                     <br>
                     <div class="ml-2">
                         <h6 style="font-size: small; font-weight: lighter; margin-left: 9px;">Department</h6>
-                        <h6 style="font-size: small; font-weight: bold; ">{{createNewEmployee.departmentName}}</h6>
+                        <h6 style="font-size: small; font-weight: bold; ">{{departmentName}}</h6>
                     </div>
 
 
