--- a/src/app/modules/loan/all-loans/all-loans.component.html
+++ b/src/app/modules/loan/all-loans/all-loans.component.html
@@ -1,6 +1,7 @@
 <ngx-componentsheader
   pageName="All Loan Requests"
-  [requiredButton]="[]"
+  [requiredButton]="[{name: 'newRequest', label: 'New Request'}]"
+  (buttonClick)="addRequest()"
 ></ngx-componentsheader>
 
 <div *ngIf="loansCounter < 1" style="background-color: #ffffff;">
