--- a/src/app/modules/loan/update-loan/update-loan.component.html
+++ b/src/app/modules/loan/update-loan/update-loan.component.html
@@ -91,7 +91,7 @@
               <label for="">Maturity Date</label>
             </div>
             <div class="col-sm-6">
-              <ngx-date [(value)]="updateLoanData.MaturityDate"></ngx-date>
+              <ngx-date [(value)]="updateLoanData.maturityDate"></ngx-date>
             </div>
           </div>
 
