--- a/src/app/modules/career-succession/testpool/testpool.component.html
+++ b/src/app/modules/career-succession/testpool/testpool.component.html
@@ -262,7 +262,7 @@
 
             <div class="form-group row">
               <div class="col">
-                <button nbButton status="primary" (click)="addCandidateToPool()">Add Candidate</button>
+                <button nbButton status="primary" (click)="addCandidateToPool()">Submit</button>
                 <span style="padding: 8px;"></span>
                 <button nbButton style="color: #4847E0;">Cancel</button>
               </div>
